force-app/main/default/objects/External_Reservation__c/fields/Check_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Date__c</fullName>
    <description>Date of Check In</description>
    <label>Check-In Date</label>
    <type>Date</type>
</CustomField>