force-app/main/default/objects/External_Reservation__c/fields/Check_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_Date__c</fullName>
    <description>Date of check out</description>
    <label>Check-Out Date</label>
    <type>Date</type>
</CustomField>