force-app/main/default/objects/External_Reservation__c/fields/Reservation_Status__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Status__c</fullName>
    <label>Reservation Status</label>
    <type>TextArea</type>
</CustomField>