force-app/main/default/objects/External_Reservation__c/fields/Room_Type__c.field-meta.xml
<CustomField>
    <fullName>Room_Type__c</fullName>
    <label>Room Type</label>
    <type>TextArea</type>
</CustomField>